# flat_matrix

./: CMakeLists.txt  README.md  infi_matrix.h  main.cpp
cmake/: flat_matrixConfig.cmake.in
include/: flat_matrix.h  infi_matrix.h
test/: main.cpp
tests/: copy_move.cpp  logic.cpp
